--- a/Sources/HTML/download.html
+++ b/Sources/HTML/download.html
@@ -2,19 +2,38 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="css.css">
-    <title>Certificados</title>
+    <title>Certificates</title>
 </head>
 <body>
     <div class="container">
         <div class="box">
-            <h3 class="tittle" style="text-align: center;">Lista de arquivos</h3>
-            <ul>
-                <li><a href="../Arquivos PDF/certificado_gestao_de_projetos.pdf" download="certificado_gestao_de_projetos.pdf" type="application/pdf">Gestão de Projetos e Desenvolvimento de Sistemas</a></li>
-                <li><a href="../Arquivos PDF/receita_de_bolo.pdf" download="receita_de_bolo.pdf" type="application/pdf">Certificado Gestão de Projetos e Desenvolvimento de Sistemas</a></li>
-                <li><a href="../Arquivos PDF/arquivo_com_texto_valido.pdf" download="arquivo_com_texto_valido.pdf" type="application/pdf">Certificado Especialização em Pedagogia</a></li>
-                <li><a href="../Arquivos PDF/arquivo_com_texto_invalido.pdf" download="arquivo_com_texto_invalido.pdf" type="application/pdf">Certificado Especialização em Pedagogia</a></li>
+            <h3 class="tittle" style="text-align: center;">Candidates</h3>
+            <ul>Elias Araujo
+                <ul>Certificates:
+                    <li><a>System Analyses Development</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" ></li>
+                    <li><a>Management Projects</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
+                </ul>
+            </ul>
+            <ul>Gabi Barbe
+                <ul>Certificates:
+                    <li><a href="../PDF Files/financial_management_especialization.pdf" download=financial_management_especialization.pdf" type="application/pdf">Financial Management</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
+                    <li><a>Countability</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
+                </ul>
+            </ul>
+            <ul>Jonathan Joestar
+                <ul>Certificates:
+                    <li><a>Pedagogy</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
+                </ul>
             </ul>
         </div>
     </div>
 </body>
 </html>
+
+<!--
+<ul>
+    <li><a href="../PDF Files/certificado_gestao_de_projetos.pdf" download="certificado_gestao_de_projetos.pdf" type="application/pdf">Gestão de Projetos e Desenvolvimento de Sistemas</a></li>
+    <li><a href="../PDF Files/receita_de_bolo.pdf" download="receita_de_bolo.pdf" type="application/pdf">Certificado Gestão de Projetos e Desenvolvimento de Sistemas</a></li>
+    <li><a href="../PDF Files/arquivo_com_texto_valido.pdf" download="arquivo_com_texto_valido.pdf" type="application/pdf">Certificado Especialização em Pedagogia</a></li>
+    <li><a href="../PDF Files/financial_management_especialization.pdf" download=financial_management_especialization.pdf" type="application/pdf">Certificate</a></li>
+</ul> -->
