--- a/Sources/HTML/download.html
+++ b/Sources/HTML/download.html
@@ -10,19 +10,19 @@
             <h3 class="tittle" style="text-align: center;">Candidates</h3>
             <ul>Elias Araujo
                 <ul>Certificates:
-                    <li><a>System Analyses Development</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" ></li>
-                    <li><a>Management Projects</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
+                    <li><a href="../PDF Files/">System Analyses Development</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" ></li>
+                    <li><a href="../PDF Files/">Management Projects</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
                 </ul>
             </ul>
             <ul>Gabi Barbe
                 <ul>Certificates:
-                    <li><a href="../PDF Files/financial_management_especialization.pdf" download=financial_management_especialization.pdf" type="application/pdf">Financial Management</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
+                    <li><a href="../PDF Files/" download=financial_management_especialization.pdf" type="application/pdf">Financial Management</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
                     <li><a>Countability</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
                 </ul>
             </ul>
             <ul>Jonathan Joestar
                 <ul>Certificates:
-                    <li><a>Pedagogy</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
+                    <li><a href="../PDF Files/">Pedagogy</a><input class="checkbox" type="checkbox" value="Valid"><input class="checkbox" type="checkbox" value="Invalid"></li>
                 </ul>
             </ul>
         </div>
